backend/nohup.out
[2024-09-20 16:09:00 +0000] [65014] [INFO] Starting gunicorn 23.0.0
[2024-09-20 16:09:00 +0000] [65014] [INFO] Listening at: http://0.0.0.0:5000 (65014)
[2024-09-20 16:09:00 +0000] [65014] [INFO] Using worker: sync
[2024-09-20 16:09:00 +0000] [65015] [INFO] Booting worker with pid: 65015
[2024-09-20 16:09:00 +0000] [65015] [ERROR] Exception in worker process
Traceback (most recent call last):
  File "/opt/ai-explosion-projects/ai-explosion/backend/ai-venv/lib/python3.11/site-packages/gunicorn/arbiter.py", line 608, in spawn_worker
    worker.init_process()
  File "/opt/ai-explosion-projects/ai-explosion/backend/ai-venv/lib/python3.11/site-packages/gunicorn/workers/base.py", line 135, in init_process
    self.load_wsgi()
  File "/opt/ai-explosion-projects/ai-explosion/backend/ai-venv/lib/python3.11/site-packages/gunicorn/workers/base.py", line 147, in load_wsgi
    self.wsgi = self.app.wsgi()
                ^^^^^^^^^^^^^^^
  File "/opt/ai-explosion-projects/ai-explosion/backend/ai-venv/lib/python3.11/site-packages/gunicorn/app/base.py", line 66, in wsgi
    self.callable = self.load()
                    ^^^^^^^^^^^
  File "/opt/ai-explosion-projects/ai-explosion/backend/ai-venv/lib/python3.11/site-packages/gunicorn/app/wsgiapp.py", line 57, in load
    return self.load_wsgiapp()
           ^^^^^^^^^^^^^^^^^^^
  File "/opt/ai-explosion-projects/ai-explosion/backend/ai-venv/lib/python3.11/site-packages/gunicorn/app/wsgiapp.py", line 47, in load_wsgiapp
    return util.import_app(self.app_uri)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/ai-explosion-projects/ai-explosion/backend/ai-venv/lib/python3.11/site-packages/gunicorn/util.py", line 370, in import_app
    mod = importlib.import_module(module)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.11/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1206, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1178, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1149, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 940, in exec_module
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/opt/ai-explosion-projects/ai-explosion/backend/wsgi.py", line 1, in <module>
    from app import app
  File "/opt/ai-explosion-projects/ai-explosion/backend/app.py", line 1
    from flask import Flask, request, jsonify
IndentationError: unexpected indent
[2024-09-20 16:09:00 +0000] [65015] [INFO] Worker exiting (pid: 65015)
[2024-09-20 16:09:00 +0000] [65016] [INFO] Booting worker with pid: 65016
[2024-09-20 16:09:00 +0000] [65016] [ERROR] Exception in worker process
Traceback (most recent call last):
  File "/opt/ai-explosion-projects/ai-explosion/backend/ai-venv/lib/python3.11/site-packages/gunicorn/arbiter.py", line 608, in spawn_worker
    worker.init_process()
  File "/opt/ai-explosion-projects/ai-explosion/backend/ai-venv/lib/python3.11/site-packages/gunicorn/workers/base.py", line 135, in init_process
    self.load_wsgi()
  File "/opt/ai-explosion-projects/ai-explosion/backend/ai-venv/lib/python3.11/site-packages/gunicorn/workers/base.py", line 147, in load_wsgi
    self.wsgi = self.app.wsgi()
                ^^^^^^^^^^^^^^^
  File "/opt/ai-explosion-projects/ai-explosion/backend/ai-venv/lib/python3.11/site-packages/gunicorn/app/base.py", line 66, in wsgi
    self.callable = self.load()
                    ^^^^^^^^^^^
  File "/opt/ai-explosion-projects/ai-explosion/backend/ai-venv/lib/python3.11/site-packages/gunicorn/app/wsgiapp.py", line 57, in load
    return self.load_wsgiapp()
           ^^^^^^^^^^^^^^^^^^^
  File "/opt/ai-explosion-projects/ai-explosion/backend/ai-venv/lib/python3.11/site-packages/gunicorn/app/wsgiapp.py", line 47, in load_wsgiapp
    return util.import_app(self.app_uri)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/ai-explosion-projects/ai-explosion/backend/ai-venv/lib/python3.11/site-packages/gunicorn/util.py", line 370, in import_app
    mod = importlib.import_module(module)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.11/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1206, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1178, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1149, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 940, in exec_module
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/opt/ai-explosion-projects/ai-explosion/backend/wsgi.py", line 1, in <module>
    from app import app
  File "/opt/ai-explosion-projects/ai-explosion/backend/app.py", line 1
    from flask import Flask, request, jsonify
IndentationError: unexpected indent
[2024-09-20 16:09:00 +0000] [65016] [INFO] Worker exiting (pid: 65016)
[2024-09-20 16:09:00 +0000] [65014] [ERROR] Worker (pid:65015) exited with code 3
[2024-09-20 16:09:00 +0000] [65014] [ERROR] Worker (pid:65016) was sent SIGTERM!
[2024-09-20 16:09:00 +0000] [65014] [ERROR] Shutting down: Master
[2024-09-20 16:09:00 +0000] [65014] [ERROR] Reason: Worker failed to boot.
